2007-08-28  Francis Kung  <fkung@redhat.com>

	* rt/java/awt/image/Raster.java: Create proper raster types.
	* rt/java/awt/image/WritableRaster.java: Likewise.

2007-08-28  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* README: Add gcjwebplugin section.

2007-08-28  Lillian Angel  <langel@redhat.com>

	* INSTALL: Added requirements for plugin.

2007-08-28  Lillian Angel  <langel@redhat.com>

	* NEWS: Updated.

2007-08-27  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-version.patch: Added patches to replace all instances
	of "OpenJDK" from java -version string with "IcedTea".

2007-08-27  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-license-headers.patch: Added patches for other
	generated headers.

2007-08-23  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* README: Minor changes to license headers section.

2007-08-21  Francis Kung  <fkung@redhat.com>

	PR 61
	* patches/icedtea-ecj-bootstrap.patch: Prevent compilation of ToBin
	class during first stage (workaround for an ecj bug).

2007-08-21  Francis Kung  <fkung@redhat.com>

	PR 62
	* Makefile.am: Fixed case where invalid openjdk zip is provided in
	--with-openjdk-zip.
	* Makefile.in: Regenerated.

2007-08-21  Francis Kung  <fkung@redhat.com>

	* .hgignore: Updated.

2007-08-20  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (gcjwebplugin.so): Include CXXFLAGS.
	($(SHARED_OBJECT_FILES)): Include CFLAGS.
	* Makefile.in: Regenerate.

2007-08-20  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (EXTRA_DIST): Add patches/icedtea-speed.patch.
	* Makefile.in: Regenerate.

2007-08-20  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (EXTRA_DIST): Add gcjwebplugin.cc.
	* Makefile.in: Regenerate.

2007-08-20  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* configure.ac: Bump version to 1.3.
	* configure: Regenerate.

2007-08-20  Francis Kung  <fkung@redhat.com>

	PR 57
	* patches/icedtea-graphics.patch: Roll back word wrap fix (Sun bug
	6491856) for backwards-compatibility.
